compiler/acton/test/syntaxerrors/err13.act
# Missing comma in list literal
def make_list():
    return [1 2 3]